# hamutay

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: autonomous-audit-restart-plan-20260609.md  ayllu-route-plan-20260626.md  ayllu-runtime-v0-contract-20260626.md  blog-the-cache-not-the-memory.md  blog-the-cache-not-the-memory.sanitized.md  bounded-autonomous-work-action-goal-20260605.md  bounded-autonomous-work-research-roadmap-20260605.md  bounded-autonomous-work-research-todo-20260605.md  bounded-autonomous-work-rubric-20260605.md  bounded-autonomous-work-stocktake-20260605.md  continuity-research-synthesis-20260605.md  driver-test-contract-handoff-20260608.md  event-loop-continuity-substrate-spec-20260605.md  event-loop-research-program-framework-20260612.md  event-loop-research-program-goals-20260612.md  event-loop-research-program-stocktake-20260613.md  event-loop-research-retrospective-20260605.md  experiment-curate-bootstrap-demolition-20260614.md  experiment-idea-curate-the-bootstrap-20260613.md  experiment-idea-secrecy-leak-vs-forget-20260607.md  experiment-idea-think-and-continue-20260614.md  feedback-llika-find-vs-bridge-surface-20260602.md  fused-build-audit-notes-20260608.md  hamutay-memory-system-requirements-20260606.md  hamutay-yanantin-memory-bridge-adapter-notes-20260608.md  hamutay-yanantin-memory-bridge-audit-notes-20260608.md  hamutay-yanantin-memory-bridge-goal-20260606.md  hypothesis-ledger-20260605.jsonl  hypothesis-ledger-audit-notes-20260605.md  hypothesis-ledger-goal-framework-20260605.md  (+20 more)
(+4077 files in other folders)
