[project]
name = "hamutay"
version = "0.1.0"
description = "Cognitive processing unit framework for transformer-based reasoning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.52",
    "numpy>=1.26",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hamutay"]
