[project]
name = "hamutay"
version = "0.1.0"
description = "Cognitive processing unit framework for transformer-based reasoning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "numpy>=2.4.2",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "toon-llm>=1.0.0b6",
    "torch>=2.0",
    "httpx>=0.27",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "prometheus-client>=0.23.0",
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
    "dask>=2026.1.2",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "tensorboard>=2.20.0",
    "pyyaml>=6.0.3",
    "umap-learn>=0.5.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
## vllm requires Python <=3.13 — install separately:
##   uv pip install vllm --python 3.12

[project.scripts]
hamutay = "hamutay.gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hamutay"]
